Fix formatting and alignmnet

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,14 @@
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+.text-center {
   text-align: center;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .logo {
